--- a/01-intro/rag-intro.ipynb
+++ b/01-intro/rag-intro.ipynb
@@ -693,6 +693,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76b65fa1-0198-4fe9-ae88-8af4380eb46b",
+   "metadata": {},
+   "source": [
+    "# Explanation\n",
+    "\n",
+    "## size\n",
+    "Specifies the number of results to return. In this case, it's set to 5, meaning the query will return up to 5 documents that match the search criteria.\n",
+    "\n",
+    "## query\n",
+    "The top-level key indicating that the following section defines the query to execute.\n",
+    "\n",
+    "## bool query\n",
+    "A boolean query allows combining multiple query clauses to achieve specific search goals.\n",
+    "\n",
+    "### must clause\n",
+    "Contains a `multi_match` query, which searches for documents that match the `user_question` in multiple fields (`question`, `text`, `section`).\n",
+    "- The `query` parameter is dynamically filled with `user_question` (presumably a user-provided search query).\n",
+    "- `fields` specifies the fields to search in. The `^3` after `question` boosts its importance (weight) in the search results, indicating that matches in the `question` field are more significant.\n",
+    "- `type` is set to `best_fields`, which finds documents where any field matches and uses the highest score for that match.\n",
+    "\n",
+    "### filter clause\n",
+    "Contains a `term` query that filters documents based on exact matching of the `course` field.\n",
+    "Specifically, it filters documents where the `course` field exactly matches \"data-engineering-zoomcamp\".\n",
+    "\n",
+    "# Summary\n",
+    "This Elasticsearch query will return up to 5 documents where:\n",
+    "- The documents must match the `user_question` in at least one of the specified fields (`question`, `text`, `section`).\n",
+    "- The `question` field is given higher relevance (`^3`) in determining matches.\n",
+    "- The documents must also have the `course` field set to \"data-engineering-zoomcamp\".\n",
+    "\n",
+    "This query structure is typical for searching specific fields with boosted relevance and applying filters to narrow down search results based on certain criteria."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "57fa9aab-ebd7-490c-ab20-0d01238c22a1",
